--- a/index.html
+++ b/index.html
@@ -462,5 +462,84 @@
         </div>
       </div>
     </footer>
+    <div class="modal-overlay">
+      <div class="modal">
+        <button type="button" class="modal-close">
+          <svg class="icon-close" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form clas="modal-form">
+          <div class="modal-field">
+            <label for="user-name" class="modal-label">Name</label>
+            <div class="input-wrap">
+              <input
+                type="text"
+                class="modal-input"
+                name="user-name"
+                id="user-name"
+              />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-phone" class="modal-label">Phone</label>
+            <div class="input-wrap">
+              <input
+                type="tel"
+                class="modal-input"
+                name="user-phone"
+                id="user-phone"
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-email" class="modal-label">Email</label>
+            <div class="input-wrap">
+              <input
+                type="email"
+                class="modal-input"
+                name="user-email"
+                id="user-email"
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-commment" class="modal-label">Comment</label>
+            <textarea
+              class="modal-textarea"
+              name="user-commment"
+              id="user-commment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <input
+            type="checkbox"
+            class="modal-check visually-hidden"
+            name="policy"
+            id="policy"
+            value="true"
+          />
+          <label for="policy" class="modal-check-text"
+            ><span class="modal-check-item">
+              <svg class="check-icon" width="10" height="10">
+                <use href="./images/icons.svg#icon-click"></use>
+              </svg> </span
+            >I accept the terms and conditions of the
+            <a href="" class="policy-link">Privacy Policy</a>
+          </label>
+          <button class="modal-btn" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
