--- a/index.html
+++ b/index.html
@@ -463,12 +463,14 @@
         <div class="footer-subscribe">
           <p class="subscribe-title">Subscribe</p>
           <form class="footer-form">
-            <input
-              type="email"
-              name="footer-email"
-              placeholder="E-mail"
-              class="footer-input"
-            />
+            <label for="footer-input-email" class="footer-field">
+              <input
+                type="email"
+                name="footer-email"
+                placeholder="E-mail"
+                class="footer-input"
+              />
+            </label>
             <button type="submit" class="footer-btn">
               Subscribe
               <svg class="email-icon" width="24" height="24">
@@ -497,7 +499,7 @@
                 name="user-name"
                 id="user-name"
               />
-              <svg class="modal-icon" width="18" height="18">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
@@ -531,29 +533,31 @@
             </div>
           </div>
           <div class="modal-field">
-            <label for="user-commment" class="modal-label">Comment</label>
+            <label for="user-comment" class="modal-label">Comment</label>
             <textarea
               class="modal-textarea"
-              name="user-commment"
-              id="user-commment"
+              name="user-comment"
+              id="user-comment"
               placeholder="Text input"
             ></textarea>
           </div>
-          <input
-            type="checkbox"
-            class="modal-check visually-hidden"
-            name="policy"
-            id="policy"
-            value="true"
-          />
-          <label for="policy" class="modal-check-text"
-            ><span class="modal-check-item">
-              <svg class="check-icon" width="10" height="10">
-                <use href="./images/icons.svg#icon-click"></use>
-              </svg> </span
-            >I accept the terms and conditions of the
-            <a href="" class="policy-link">Privacy Policy</a>
-          </label>
+          <div class="form-checbox">
+            <input
+              type="checkbox"
+              class="modal-check visually-hidden"
+              name="policy"
+              id="policy"
+              value="true"
+            />
+            <label for="policy" class="modal-check-text"
+              ><span class="modal-check-item">
+                <svg class="check-icon" width="10" height="10">
+                  <use href="./images/icons.svg#icon-click"></use>
+                </svg> </span
+              >I accept the terms and conditions of the
+              <a href="" class="policy-link">Privacy Policy</a>
+            </label>
+          </div>
           <button class="modal-btn" type="submit">Send</button>
         </form>
       </div>
