--- a/index.html
+++ b/index.html
@@ -545,13 +545,13 @@
             <input
               type="checkbox"
               class="modal-check visually-hidden"
-              name="policy"
-              id="policy"
+              name="user-privacy"
+              id="user-privacy"
               value="true"
             />
-            <label for="policy" class="modal-check-text"
+            <label for="user-privacy" class="modal-check-text"
               ><span class="modal-check-item">
-                <svg class="check-icon" width="10" height="10">
+                <svg class="check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-click"></use>
                 </svg> </span
               >I accept the terms and conditions of the
