--- a/index.html
+++ b/index.html
@@ -483,11 +483,13 @@
     </footer>
     <div class="modal-overlay">
       <div class="modal">
-        <button type="button" class="modal-close">
-          <svg class="icon-close" width="8" height="8">
-            <use href="./images/icons.svg#icon-close"></use>
-          </svg>
-        </button>
+        <div class="btn-close">
+          <button type="button" class="modal-close">
+            <svg class="icon-close" width="8" height="8">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+        </div>
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form clas="modal-form">
           <div class="modal-field">
@@ -532,7 +534,7 @@
               </svg>
             </div>
           </div>
-          <div class="modal-field">
+          <div class="modal-field-textarea">
             <label for="user-comment" class="modal-label">Comment</label>
             <textarea
               class="modal-textarea"
