--- a/index.html
+++ b/index.html
@@ -469,6 +469,7 @@
                 name="footer-email"
                 placeholder="E-mail"
                 class="footer-input"
+                id="footer-input-email"
               />
             </label>
             <button type="submit" class="footer-btn">
@@ -488,9 +489,8 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
-
         <p class="modal-title">Leave your contacts and we will call you back</p>
-        <form clas="modal-form">
+        <form class="modal-form">
           <div class="modal-field">
             <label for="user-name" class="modal-label">Name</label>
             <div class="input-wrap">
